kubernetes/test_k/flask-app-deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app 
  template:
    metadata:
      labels:
        app: flask-app 
    spec:
      containers: 
        - name: flask-app-container
          image: youssefashraf265/flask-example-master_web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: my-docker-registry-secret
