kubernetes/test_k/flask-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-web-service
  namespace: test
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000
